# Imitool

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
assets/: imitool-icon.icns
src/: about_window.py  check_exiftool.py  main.py  metadata.py
tests/: test_metadata.py
